lang/tests/contract/ui/fail/28-invalid-event-data-type.stderr
error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_Output_Type` is not satisfied
  --> $DIR/28-invalid-event-data-type.rs:10:12
   |
10 |         f: f32,
   |            ^^^ the trait `You_Should_Use_An_Valid_Output_Type` is not implemented for `f32`
